CSS : ajustement "width" sur card

--- a/Projet_7/index.html
+++ b/Projet_7/index.html
@@ -66,7 +66,7 @@
                                 <span class="ingredients">Sucre:<span class="ingredients_quantities"> 20g</span></span>
                                 <span class="ingredients">Glaçons:<span class="ingredients_quantities"> 2</span></span>
                             </span>
-                            <span class="preparation_container">
+                            <span class="container_preparation">
                                 <p class="preparation">Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette. Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette.</p>
                             </span>
                         </div>
@@ -91,7 +91,7 @@
                                 <span class="ingredients">Sucre:<span class="ingredients_quantities"> 20g</span></span>
                                 <span class="ingredients">Glaçons:<span class="ingredients_quantities"> 2</span></span>
                             </span>
-                            <span class="preparation_container">
+                            <span class="container_preparation">
                                 <p class="preparation">Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette. Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette.</p>
                             </span>
                         </div>
@@ -116,7 +116,7 @@
                                 <span class="ingredients">Sucre:<span class="ingredients_quantities"> 20g</span></span>
                                 <span class="ingredients">Glaçons:<span class="ingredients_quantities"> 2</span></span>
                             </span>
-                            <span class="preparation_container">
+                            <span class="container_preparation">
                                 <p class="preparation">Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette. Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette.</p>
                             </span>
                         </div>
@@ -141,7 +141,7 @@
                                 <span class="ingredients">Sucre:<span class="ingredients_quantities"> 20g</span></span>
                                 <span class="ingredients">Glaçons:<span class="ingredients_quantities"> 2</span></span>
                             </span>
-                            <span class="preparation_container">
+                            <span class="container_preparation">
                                 <p class="preparation">Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette. Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette.</p>
                             </span>
                         </div>
@@ -166,7 +166,7 @@
                                 <span class="ingredients">Sucre:<span class="ingredients_quantities"> 20g</span></span>
                                 <span class="ingredients">Glaçons:<span class="ingredients_quantities"> 2</span></span>
                             </span>
-                            <span class="preparation_container">
+                            <span class="container_preparation">
                                 <p class="preparation">Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette. Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette.</p>
                             </span>
                         </div>
@@ -191,7 +191,7 @@
                                 <span class="ingredients">Sucre:<span class="ingredients_quantities"> 20g</span></span>
                                 <span class="ingredients">Glaçons:<span class="ingredients_quantities"> 2</span></span>
                             </span>
-                            <span class="preparation_container">
+                            <span class="container_preparation">
                                 <p class="preparation">Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette. Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette.</p>
                             </span>
                         </div>
@@ -216,7 +216,7 @@
                                 <span class="ingredients">Sucre:<span class="ingredients_quantities"> 20g</span></span>
                                 <span class="ingredients">Glaçons:<span class="ingredients_quantities"> 2</span></span>
                             </span>
-                            <span class="preparation_container">
+                            <span class="container_preparation">
                                 <p class="preparation">Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette. Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette.</p>
                             </span>
                         </div>
@@ -241,7 +241,7 @@
                                 <span class="ingredients">Sucre:<span class="ingredients_quantities"> 20g</span></span>
                                 <span class="ingredients">Glaçons:<span class="ingredients_quantities"> 2</span></span>
                             </span>
-                            <span class="preparation_container">
+                            <span class="container_preparation">
                                 <p class="preparation">Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette. Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette.</p>
                             </span>
                         </div>
