--- a/Projet_7/index.html
+++ b/Projet_7/index.html
@@ -32,12 +32,28 @@
                     </svg>
                     
             </div>
+
+            <div class="search_tools">
+                <button class="ingredient_tool search_tool tool_content hidden">Moutarde de dijon<svg class="close hidden" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z" fill="white"/>
+                    </svg>
+                    </button>
+                <button class="appareil_tool search_tool tool_content hidden">Coco<svg class="close hidden" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z" fill="white"/>
+                    </svg>
+                    </button>
+                <button class="ustensil_tool search_tool tool_content hidden">Noix de coco<svg class="close hidden" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z" fill="white"/>
+                    </svg>
+                    </button>
+            </div>
+
             <div class="buttons_container">
                 <button class="select_buttons" id="ingredients">Ingrédients<span class="arrow"><svg class="arrow" id="arrow_first" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
                     </svg></span>
                     </button>
-                <button class="select_buttons" id="appareils">Appareils<span class="arrow"><svg class="arrow" id="arrow_second" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <button class="select_buttons " id="appareils">Appareils<span class="arrow"><svg class="arrow" id="arrow_second" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
                     </svg></span>
                     </button>
@@ -46,6 +62,18 @@
                     </svg></span>
                     </button>
             </div>
+
+            <div class="dropdown_search_container">
+                    <input type="search" autocomplete="on" class="dropdown_search" id="dropdown_ingredients"><span><svg class="arrow_dropdown" id="arrow_dropdown_ingredients" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
+                        </svg></span></input>
+                    <input type="search" autocomplete="on" class="dropdown_search hidden" id="dropdown_appareils"><span><svg class="arrow_dropdown hidden" id="arrow_dropdown_appareils" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
+                        </svg></span></input>
+                    <input type="search" autocomplete="on" class="dropdown_search hidden" id="dropdown_ustensils"><span><svg class="arrow_dropdown hidden" id="arrow_dropdown_ustensils" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
+                        </svg></span></input>
+                </div>
 
             <section class="recipe_container">
                 <div class="recipe_card">
