JS : affichage recettes (manque photos à ajouter)

--- a/Projet_7/index.html
+++ b/Projet_7/index.html
@@ -33,16 +33,16 @@
                     
             </div>
 
-            <div class="search_tools">
-                <button class="ingredient_tool search_tool tool_content hidden">Moutarde de dijon<svg class="close hidden" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="search_tools hidden">
+                <button class="ingredient_tool search_tool tool_content">Moutarde de dijon<svg class="close" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z" fill="white"/>
                     </svg>
                     </button>
-                <button class="appareil_tool search_tool tool_content hidden">Coco<svg class="close hidden" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <button class="appareil_tool search_tool tool_content">Coco<svg class="close" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z" fill="white"/>
                     </svg>
                     </button>
-                <button class="ustensil_tool search_tool tool_content hidden">Noix de coco<svg class="close hidden" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <button class="ustensil_tool search_tool tool_content">Noix de coco<svg class="close" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z" fill="white"/>
                     </svg>
                     </button>
@@ -64,7 +64,7 @@
             </div>
 
             <div class="dropdown_search_container">
-                    <input type="search" autocomplete="on" class="dropdown_search" id="dropdown_ingredients"><span><svg class="arrow_dropdown" id="arrow_dropdown_ingredients" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <input type="search" autocomplete="on" class="dropdown_search hidden" id="dropdown_ingredients"><span><svg class="arrow_dropdown" id="arrow_dropdown_ingredients" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
                         </svg></span></input>
                     <input type="search" autocomplete="on" class="dropdown_search hidden" id="dropdown_appareils"><span><svg class="arrow_dropdown hidden" id="arrow_dropdown_appareils" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -76,7 +76,7 @@
                 </div>
 
             <section class="recipe_container">
-                <div class="recipe_card">
+                <!-- <div class="recipe_card">
                     <a href="">
                         <img class="recipe_image" src="" alt="">
                         <h2>Limonade de coco</h2>
@@ -94,8 +94,8 @@
                                 <span class="ingredients">Sucre:<span class="ingredients_quantities"> 20g</span></span>
                                 <span class="ingredients">Glaçons:<span class="ingredients_quantities"> 2</span></span>
                             </span>
-                            <span class="container_preparation">
-                                <p class="preparation">Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette. Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette.</p>
+                            <span class="container_description">
+                                <p class="description">Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette. Découper le thon en dés, mettre dans un plat et recouvir de jus de citron vert(mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins deux heures et continuer à faire la recette.</p>
                             </span>
                         </div>
                     </a>
@@ -274,10 +274,11 @@
                             </span>
                         </div>
                     </a>
-                </div>
+                </div> -->
             
             </section>
         </main>
         </div>
+        <script src="./index.js"></script>
     </body>
 </html>
