Dropdowns : JS affichage des éléments dans les dropdowns (ingredients, appareils, ustensils) + mise en page CSS

--- a/Projet_7/index.html
+++ b/Projet_7/index.html
@@ -58,9 +58,7 @@
                         </svg></span>
                     </div>
                     <ul class="menu" id="menu_ingredients">
-                        <!-- <li>Ingredients n°1</li>
-                        <li>Ingredients n°1</li>
-                        <li>Ingredients n°1</li> -->
+                        <li class="menu_li"></li>
                     </ul>
                 </div>
 
@@ -143,4 +141,5 @@
         <script src="./displayRecipes.js"></script>
         <script src="./functionnalProgramming.js"></script>
         <script src="./normalizeString.js"></script>
+        <script src="./dropdowns.js"></script>
 </html>
