Filtre des tags par ordre alsphabétique (JS), ajout de l'input de recherche des tags et ajout des événements (JS) + MAJ CSS

--- a/Projet_7/index.html
+++ b/Projet_7/index.html
@@ -33,7 +33,8 @@
                 <div class="input_tags"></div>
             </div>
 
-            <div class="search_tools hidden">
+            <!-- TAGS
+                <div class="search_tools hidden">
                 <button class="ingredient_tool search_tool tool_content">Moutarde de dijon<svg class="close" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z" fill="white"/>
                     </svg>
@@ -46,13 +47,13 @@
                     <path d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z" fill="white"/>
                     </svg>
                     </button>
-            </div>
+            </div> -->
 
             <div class="dropdown_container">
 
-                <div class="dropdown">
+                <div class="dropdown" id="dropdownIngredients">
                     <div class="select" id="select_ingredients">
-                        <button class="dropdown_buttons" id="ingredients">Ingrédients</button>
+                        <button class="dropdown_buttons" id="button_ingredients">Ingrédients</button>
                         <span class="arrow"><svg class="arrow" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
                         </svg></span>
@@ -62,46 +63,42 @@
                     </ul>
                 </div>
 
-                <div class="dropdown">
+                <div class="dropdown" id="dropdownAppareils">
                     <div class="select" id="select_appareils">
-                        <button class="dropdown_buttons" id="appareils">Appareils</button>
+                        <button class="dropdown_buttons" id="button_appareils">Appareils</button>
                         <span class="arrow"><svg class="arrow" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
                             </svg></span>
                     </div>
                     <ul class="menu" id="menu_appareils">
-                        <li>Appareil n°1</li>
-                        <li>Appareil n°1</li>
-                        <li>Appareil n°1</li>
+                        <li class="menu_li"></li>
                     </ul>
                 </div>
 
                 <div class="dropdown">
                     <div class="select" id="select_ustensils">
-                        <button class="dropdown_buttons" id="ustensils">Ustensils</button>
+                        <button class="dropdown_buttons" id="button_ustensils">Ustensils</button>
                         <span class="arrow"><svg class="arrow" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                          <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
                          </svg></span>
                     </div>
                     <ul class="menu" id="menu_ustensils">
-                        <li>Ustensils n°1</li>
-                        <li>Ustensils n°1</li>
-                        <li>Ustensils n°1</li>
+                        <li class="menu_li"></li>
                     </ul>
                 </div>
             </div> 
 
-            <!-- <div class="dropdown_search_container">
-                    <input type="search" autocomplete="on" class="dropdown_search hidden" id="dropdown_ingredients"><span><svg class="arrow_dropdown" id="arrow_dropdown_ingredients" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="dropdown_search_container">
+                    <input type="search" class="dropdown_search hidden_dropdown" id="dropdown_ingredients" autocomplete="on" placeholder="Rechercher un ingrédient"><span><svg class="arrow_dropdown hidden" id="arrow_dropdown_ingredients" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
                         </svg></span></input>
-                    <input type="search" autocomplete="on" class="dropdown_search hidden" id="dropdown_appareils"><span><svg class="arrow_dropdown hidden" id="arrow_dropdown_appareils" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <input type="search" class="dropdown_search hidden_dropdown" id="dropdown_appareils" autocomplete="on" placeholder="Rechercher un appareil"><span><svg class="arrow_dropdown hidden" id="arrow_dropdown_appareils" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
                         </svg></span></input>
-                    <input type="search" autocomplete="on" class="dropdown_search hidden" id="dropdown_ustensils"><span><svg class="arrow_dropdown hidden" id="arrow_dropdown_ustensils" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <input type="search" class="dropdown_search hidden_dropdown" id="dropdown_ustensils" autocomplete="on" placeholder="Rechercher un ustensil"><span><svg class="arrow_dropdown hidden" id="arrow_dropdown_ustensils" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
                         </svg></span></input>
-                </div> -->
+                </div>
 
             <section class="recipe_container">
                 <!-- <div class="recipe_card">
