MAJ : suppression boutons et marge entre les filtres de recherche et les recettes

--- a/Projet_7/index.html
+++ b/Projet_7/index.html
@@ -54,7 +54,7 @@
                 <div class="dropdown" id="dropdownIngredients">
                     <div class="select" id="select_ingredients">
                         <button class="dropdown_buttons" id="button_ingredients">Ingrédients</button>
-                        <span class="arrow"><svg class="arrow" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <span class="arrow" id="arrow_button_ingredient"><svg class="arrow" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
                         </svg></span>
                     </div>
@@ -66,7 +66,7 @@
                 <div class="dropdown" id="dropdownAppareils">
                     <div class="select" id="select_appareils">
                         <button class="dropdown_buttons" id="button_appareils">Appareils</button>
-                        <span class="arrow"><svg class="arrow" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <span class="arrow" id="arrow_button_appareils"><svg class="arrow" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
                             </svg></span>
                     </div>
@@ -78,7 +78,7 @@
                 <div class="dropdown">
                     <div class="select" id="select_ustensils">
                         <button class="dropdown_buttons" id="button_ustensils">Ustensils</button>
-                        <span class="arrow"><svg class="arrow" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <span class="arrow" id="arrow_button_ustensils"><svg class="arrow" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                          <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
                          </svg></span>
                     </div>
