--- a/Projet_7/index.html
+++ b/Projet_7/index.html
@@ -30,24 +30,29 @@
                 <svg id="search_icon" width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M23.4167 20.6667H21.9683L21.455 20.1717C23.2517 18.0817 24.3333 15.3683 24.3333 12.4167C24.3333 5.835 18.9983 0.5 12.4167 0.5C5.835 0.5 0.5 5.835 0.5 12.4167C0.5 18.9983 5.835 24.3333 12.4167 24.3333C15.3683 24.3333 18.0817 23.2517 20.1717 21.455L20.6667 21.9683V23.4167L29.8333 32.565L32.565 29.8333L23.4167 20.6667ZM12.4167 20.6667C7.85167 20.6667 4.16667 16.9817 4.16667 12.4167C4.16667 7.85167 7.85167 4.16667 12.4167 4.16667C16.9817 4.16667 20.6667 7.85167 20.6667 12.4167C20.6667 16.9817 16.9817 20.6667 12.4167 20.6667Z" fill="black"/>
                     </svg>
-                <div class="input_tags"></div>
-            </div>
+                    
+                <div class="input_tags widgets_container">
 
-            <!-- TAGS
-                <div class="search_tools hidden">
-                <button class="ingredient_tool search_tool tool_content">Moutarde de dijon<svg class="close" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z" fill="white"/>
-                    </svg>
-                    </button>
-                <button class="appareil_tool search_tool tool_content">Coco<svg class="close" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z" fill="white"/>
-                    </svg>
-                    </button>
-                <button class="ustensil_tool search_tool tool_content">Noix de coco<svg class="close" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z" fill="white"/>
-                    </svg>
-                    </button>
-            </div> -->
+                    <!-- TAGS
+                        <button class="widget ingredient_widget hidden">
+                        <svg class="close" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z" fill="white"/>
+                        </svg>
+                        </button> 
+                    <button class="widget appliance_widget hidden">
+                        <svg class="close" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z" fill="white"/>
+                        </svg>
+                        </button>
+                    <button class="widget ustensil_widget hidden">
+                        <svg class="close" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z" fill="white"/>
+                        </svg>
+                        </button> -->
+                        
+                </div>
+
+            </div>
 
             <div class="dropdown_container">
 
@@ -58,9 +63,12 @@
                         <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
                         </svg></span>
                     </div>
-                    <ul class="menu" id="menu_ingredients">
-                        <li class="menu_li"></li>
-                    </ul>
+                    <input type="text" class="dropdown_search hidden" id="dropdown_ingredients" autocomplete="on" placeholder="Rechercher un ingrédient"><span><svg class="arrow_dropdown hidden" id="arrow_dropdown_ingredients" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
+                        </svg></span>
+                        <ul class="menu" id="menu_ingredients">
+                            <li class="menu_li"></li>
+                        </ul></input>
                 </div>
 
                 <div class="dropdown" id="dropdownAppareils">
@@ -70,9 +78,12 @@
                             <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
                             </svg></span>
                     </div>
-                    <ul class="menu" id="menu_appareils">
-                        <li class="menu_li"></li>
-                    </ul>
+                    <input type="text" class="dropdown_search hidden" id="dropdown_appareils" autocomplete="on" placeholder="Rechercher un appareil"><span><svg class="arrow_dropdown hidden" id="arrow_dropdown_appareils" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
+                       </svg></span></input>
+                       <ul class="menu" id="menu_appareils">
+                           <li class="menu_li"></li>
+                       </ul>
                 </div>
 
                 <div class="dropdown">
@@ -82,23 +93,14 @@
                          <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
                          </svg></span>
                     </div>
-                    <ul class="menu" id="menu_ustensils">
-                        <li class="menu_li"></li>
-                    </ul>
+                    <input type="text" class="dropdown_search hidden" id="dropdown_ustensils" autocomplete="on" placeholder="Rechercher un ustensil"><span><svg class="arrow_dropdown hidden" id="arrow_dropdown_ustensils" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
+                        </svg></span>
+                        <ul class="menu" id="menu_ustensils">
+                            <li class="menu_li"></li>
+                        </ul></input>
                 </div>
             </div> 
-
-            <div class="dropdown_search_container">
-                    <input type="search" class="dropdown_search hidden_dropdown" id="dropdown_ingredients" autocomplete="on" placeholder="Rechercher un ingrédient"><span><svg class="arrow_dropdown hidden" id="arrow_dropdown_ingredients" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
-                        </svg></span></input>
-                    <input type="search" class="dropdown_search hidden_dropdown" id="dropdown_appareils" autocomplete="on" placeholder="Rechercher un appareil"><span><svg class="arrow_dropdown hidden" id="arrow_dropdown_appareils" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
-                        </svg></span></input>
-                    <input type="search" class="dropdown_search hidden_dropdown" id="dropdown_ustensils" autocomplete="on" placeholder="Rechercher un ustensil"><span><svg class="arrow_dropdown hidden" id="arrow_dropdown_ustensils" width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z" fill="white"/>
-                        </svg></span></input>
-                </div>
 
             <section class="recipe_container">
                 <!-- <div class="recipe_card">
@@ -138,5 +140,5 @@
         <script src="./displayRecipes.js"></script>
         <script src="./functionnalProgramming.js"></script>
         <script src="./normalizeString.js"></script>
-        <script src="./dropdowns.js"></script>
+        <script src="./searchFilters.js"></script>
 </html>
